# mlx-pretrain

./: .gitignore  README-TESTS.md  README.md  dataset.py  generate.py  leaderboard.txt  model-config-sample-larger.yaml  package-lock.json  package.json  plot-leaderboard.py  plot-logs.py  process_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rl-config.yaml  rl.py  run_arithmetic_tests.py  sample.yaml  sft-config.yaml  sft.py  test_arithmetic.py  test_model.js  test_validation.py  train.py  validation_test_set.jsonl
data_processing/: create_test_set.py  find_longest.py  load_and_preprocess.py  make_train_and_val.py
model_results/: arithmetic_test_results.json  claude_results_haiku.json  claude_results_sonnet.json  deepseek_results.json  gemini-2.0-flash-lite-001.json  gemini_2_0_flash_001.json  llama_3.2_1b.json  llama_3.2_3b.json  llama_3_1_405b.json  llama_3_1_8b.json  llama_3_3_70b.json  qwen-2.5-32b-instruct.json  qwen-2.5-7b-instruct.json  qwen-2.5-coder-32b-instruct.json  qwen_2_5_72b.json
runs/OEIS-19M/: config.yaml  metadata.json
runs/OEIS-4M/: config.yaml  metadata.json
tests/: conftest.py  test_dataset.py  test_examine.py  test_generate.py  test_rl.py  test_sft.py  test_train.py  test_train_tokenizer.py
